--- a/_posts/2013-05-07-init.markdown
+++ b/_posts/2013-05-07-init.markdown
@@ -1,4 +1,25 @@
 ---
-title: First Test Post
+title: Github Pages Workflow
 ---
-Does this work?
+##Simple Version
+
+###Branches
+master
+gh-pages
+dev
+
+The master branch is the stable version of the site. If anything goes wrong we can always just revert to the master branch. All development is done on the dev branch. When everything looks good locally we can merge the dev branch into the gh-pages branch. The gh-pages branch isn't really a bonified branch though. It just has the most up to date, but not nessisarily stable, copy of the site. So, when the dev branch is ready to go live the gh-pages branch needs to be blown away. Git merge probably isn't the right commant. merge --squash looked hopeful, but nope. Rebase doesn't look right either.
+
+##With Testing Site
+
+###Remotes
+production
+testing
+
+###Branches
+master
+gh-pages
+dev
+hold
+
+This one works pretty much the same, but we use an additional repo to host the testing version. The hold branch is a maintenance page. To start off we 'super merge' the hold branch into the gh-pages branch and push that to production. We then 'super merge' the dev branch back into 'gh-pages' and push that to testing. Boom, we have a maintenance page in the final location, and we have a development copy on the testing repository. Now we have a pretty robust development methodology all set up on a free host that is perfectly integrated with Git.
