--- a/make/_posts/2013-08-06-So-Cold.MARKDOWN
+++ b/make/_posts/2013-08-06-So-Cold.MARKDOWN
@@ -1,7 +1,8 @@
 ---
 title: Positive Performance Training
 layout: single-make
-img: images/bridgetownbass.jpg
+img: positiveperformancetraining
+imgAlt: Metal training for athletes.
 link: http://positiveperformancetraining.com/
 ---
 <p>With an established and complex WordPress based e-learning platform Positive Performance Training needed an active and engagning interface inside and out.</p>
